Add support for py39
Change-Id: I987a3da810613df104402a3acbe3c1c9dcd36ed1
Story: TRIPLEOCI-355

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.8
-envlist = linters,py38
+envlist = linters,py
 skipsdist = True
 
 # Automatic envs will only use the python version appropriate to that
