Switch to tripleo namespace grafana images
We cannot rely on quay app-sre namespace as they removed the
image and it blocked all the content provider job.

Switching to tripleo/grafana image for the same.

Closes-Bug: #1920873

Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>
Change-Id: I6999e683edd82ef61fba768013b12408851f6f09

--- a/container-images/container_image_prepare_defaults.yaml
+++ b/container-images/container_image_prepare_defaults.yaml
@@ -42,6 +42,6 @@ parameter_defaults:
       ceph_node_exporter_image: node-exporter
       ceph_node_exporter_tag: v0.17.0
 
-      ceph_grafana_namespace: quay.io/app-sre
+      ceph_grafana_namespace: quay.io/tripleo
       ceph_grafana_image: grafana
       ceph_grafana_tag: 6.7.4
