Switch to tripleo namespace grafana images
We cannot rely on quay app-sre namespace as they removed the
image and it blocked all the content provider job.

Switching to tripleo/grafana image for the same.

Note: It is not a clean cherry-pick as container build method
support both kolla and tcib based method, so making changes for
both of them.

Closes-Bug: #1920873

Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>
Change-Id: I6999e683edd82ef61fba768013b12408851f6f09
(cherry picked from commit e0b0d859efb179c6868020b3fc10c2155ed96820)

--- a/container-images/overcloud_containers.yaml
+++ b/container-images/overcloud_containers.yaml
@@ -203,7 +203,7 @@ container_images:
   image_source: prom
 - imagename: quay.io/prometheus/node-exporter:v0.17.0
   image_source: prom
-- imagename: quay.io/app-sre/grafana:5.2.4
+- imagename: quay.io/tripleo/grafana:5.2.4
   image_source: grafana
 - imagename: quay.io/tripleotrain/centos-binary-tempest:current-tripleo
   image_source: kolla
