Use quay.ceph.io to pull the Ceph Dashboard related images
The purpose of this change is just to switch to quay.ceph.io
and pull from that location the Ceph Dashboard related images.
quay.ceph.io is maintained by the Ceph organization and can
be trusted to find the tags that we need.

Closes-Bug: #1920873
Change-Id: If5ec5d4fa0d4d835561b5963d244e5172fe82cc8

--- a/container-images/container_image_prepare_defaults.yaml
+++ b/container-images/container_image_prepare_defaults.yaml
@@ -30,18 +30,18 @@ parameter_defaults:
       ceph_image: daemon
       ceph_tag: v5.0.7-stable-5.0-octopus-centos-8-x86_64
 
-      ceph_prometheus_namespace: quay.io/prometheus
+      ceph_prometheus_namespace: quay.ceph.io/prometheus
       ceph_prometheus_image: prometheus
       ceph_prometheus_tag: v2.7.2
 
-      ceph_alertmanager_namespace: quay.io/prometheus
+      ceph_alertmanager_namespace: quay.ceph.io/prometheus
       ceph_alertmanager_image: alertmanager
       ceph_alertmanager_tag: v0.16.2
 
-      ceph_node_exporter_namespace: quay.io/prometheus
+      ceph_node_exporter_namespace: quay.ceph.io/prometheus
       ceph_node_exporter_image: node-exporter
       ceph_node_exporter_tag: v0.17.0
 
-      ceph_grafana_namespace: quay.io/tripleo
+      ceph_grafana_namespace: quay.ceph.io/app-sre
       ceph_grafana_image: grafana
       ceph_grafana_tag: 6.7.4
