--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -177,13 +177,13 @@ container_images:
   image_source: tripleo
 - imagename: quay.ceph.io/ceph-ci/daemon:v5.0.7-stable-5.0-octopus-centos-8-x86_64
   image_source: ceph
-- imagename: quay.io/prometheus/prometheus:v2.7.2
+- imagename: quay.ceph.io/prometheus/prometheus:v2.7.2
   image_source: prom
-- imagename: quay.io/prometheus/alertmanager:v0.16.2
+- imagename: quay.ceph.io/prometheus/alertmanager:v0.16.2
   image_source: prom
-- imagename: quay.io/prometheus/node-exporter:v0.17.0
+- imagename: quay.ceph.io/prometheus/node-exporter:v0.17.0
   image_source: prom
-- imagename: quay.io/tripleo/grafana:6.7.4
+- imagename: quay.ceph.io/app-sre/grafana:6.7.4
   image_source: grafana
 - imagename: quay.io/tripleomaster/openstack-rsyslog:current-tripleo
   image_source: tripleo
