Use quay.ceph.io to pull the Ceph Dashboard related images
The purpose of this change is just to switch to quay.ceph.io
and pull from that location the Ceph Dashboard related images.
quay.ceph.io is maintained by the Ceph organization and can
be trusted to find the tags that we need.

Closes-Bug: #1920873
Change-Id: If5ec5d4fa0d4d835561b5963d244e5172fe82cc8
(cherry picked from commit 72c7d4ac71d33c8803120767108c6bf2ffeb2edc)

--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -175,13 +175,13 @@ container_images:
   image_source: tripleo
 - imagename: quay.ceph.io/ceph-ci/daemon:v4.0.13-stable-4.0-nautilus-centos-7-x86_64
   image_source: ceph
-- imagename: quay.io/prometheus/prometheus:v2.7.2
+- imagename: quay.ceph.io/prometheus/prometheus:v2.7.2
   image_source: prom
-- imagename: quay.io/prometheus/alertmanager:v0.16.2
+- imagename: quay.ceph.io/prometheus/alertmanager:v0.16.2
   image_source: prom
-- imagename: quay.io/prometheus/node-exporter:v0.17.0
+- imagename: quay.ceph.io/prometheus/node-exporter:v0.17.0
   image_source: prom
-- imagename: quay.io/tripleo/grafana:5.4.3
+- imagename: quay.ceph.io/app-sre/grafana:5.4.3
   image_source: grafana
 - imagename: quay.io/tripleoussuri/centos-binary-tempest:current-tripleo
   image_source: tripleo
