Don't install dhcp-all-interfaces for redhat 8 onwards
This element was needed for centos-7 and earlier because by default
only the first interface had dhcp enabled. This is no longer the case
with centos-8, every interface has dhcp enabled. Additionally this
element is causing issues in some environments.

This change removes the element from all *-8 images since it no longer
serves a useful purpose and is causing problems in some cases.

Change-Id: I2cc79caeabd9d1b85f54320a83e5f36a64003303
(cherry picked from commit af9329599bec35e241db8466ec172e7d498ad6ea)
(cherry picked from commit a575fd8d639e4e37819e5bc1d7352902119df996)
(cherry picked from commit 813a7382be66058086c78c0c05602f7ae963b9ac)

--- a/image-yaml/overcloud-hardened-images-centos7.yaml
+++ b/image-yaml/overcloud-hardened-images-centos7.yaml
@@ -4,6 +4,7 @@ disk_images:
     type: qcow2
     distro: centos7
     elements:
+      - dhcp-all-interfaces
       - selinux-permissive
     packages:
       - yum-plugin-priorities
