--- a/image-yaml/overcloud-hardened-images-rhel7.yaml
+++ b/image-yaml/overcloud-hardened-images-rhel7.yaml
@@ -3,5 +3,7 @@ disk_images:
     imagename: overcloud-hardened-full
     type: qcow2
     distro: rhel
+    elements:
+      - dhcp-all-interfaces
     environment:
       DIB_RELEASE: '7'
