--- a/image-yaml/overcloud-hardened-images-uefi-centos7.yaml
+++ b/image-yaml/overcloud-hardened-images-uefi-centos7.yaml
@@ -4,6 +4,7 @@ disk_images:
     type: qcow2
     distro: centos7
     elements:
+      - dhcp-all-interfaces
       - selinux-permissive
     packages:
       - yum-plugin-priorities
