--- a/image-yaml/overcloud-realtime-compute-rhel7.yaml
+++ b/image-yaml/overcloud-realtime-compute-rhel7.yaml
@@ -3,3 +3,5 @@ disk_images:
     imagename: overcloud-realtime-compute
     type: qcow2
     distro: rhel7
+    elements:
+      - dhcp-all-interfaces
