Update defaults for rhel modules in container base
All rhel releases that use tcib have moved to
rhel 8.4 This patch updates the default module
versions to match the versions required in 8.4.

Change-Id: I3b2075b68695025a543b7ac5612cc73c5858de5b

--- a/container-images/tcib/base/base.yaml
+++ b/container-images/tcib/base/base.yaml
@@ -59,8 +59,8 @@ tcib_packages:
   modules:
   - disable: container-tools:rhel8
   - disable: virt:rhel
-  - enable: container-tools:{{ tcib_rhel_modules['container-tools'] | default('2.0') }}
+  - enable: container-tools:{{ tcib_rhel_modules['container-tools'] | default('3.0') }}
   - enable: mariadb:{{ tcib_rhel_modules['mariadb'] | default('10.3') }}
-  - enable: virt:{{ tcib_rhel_modules['virt'] | default('8.2') }}
+  - enable: virt:{{ tcib_rhel_modules['virt'] | default('av') }}
   - enable: redis:{{ tcib_rhel_modules['redis'] | default('5') }}
 tcib_stopsignal: SIGTERM
