Update image build dependencies
tripleo-buildimage-overcloud-hardened-uefi-full-centos-8 has the same
dependencies as tripleo-buildimage-overcloud-hardened-full-centos-8

Blueprint: whole-disk-default
Depends-On: https://review.opendev.org/c/openstack/tripleo-ci/+/788878
Change-Id: I4aef31ea2e2f5665e63cb2dae598428d4654b0ca

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -34,6 +34,8 @@
             dependencies: *deps_unit_lint
         - tripleo-buildimage-overcloud-hardened-full-centos-8:
             dependencies: *deps_unit_lint
+        - tripleo-buildimage-overcloud-hardened-uefi-full-centos-8:
+            dependencies: *deps_unit_lint
 
 
     gate:
