--- a/image-yaml/overcloud-images-rhel8.yaml
+++ b/image-yaml/overcloud-images-rhel8.yaml
@@ -7,6 +7,8 @@ disk_images:
     elements:
       - selinux-permissive
       - interface-names
+    packages:
+      - rhosp-release
     environment:
       FS_TYPE: xfs
     options:
