--- a/container-images/tcib/base/os/neutron-base/neutron-server/neutron-server.yaml
+++ b/container-images/tcib/base/os/neutron-base/neutron-server/neutron-server.yaml
@@ -8,5 +8,6 @@ tcib_packages:
   - mod_ssl
   - python3-networking-ansible
   - python3-networking-baremetal
+  - python3-networking-bgpvpn
   - python3-mod_wsgi
 tcib_user: neutron
