--- a/container-images/tcib/base/os/neutron-base/neutron-server/neutron-server.yaml
+++ b/container-images/tcib/base/os/neutron-base/neutron-server/neutron-server.yaml
@@ -8,4 +8,5 @@ tcib_packages:
   - mod_ssl
   - python3-networking-ansible
   - python3-networking-baremetal
+  - python3-networking-bgpvpn
 tcib_user: neutron
