--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-minversion = 3.8
+minversion = 3.18.0
 envlist = linters,py
 skipsdist = True
 
@@ -36,7 +36,7 @@ deps =
        -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands = stestr run {posargs}
-whitelist_externals =
+allowlist_externals =
     bash
     tox
 
@@ -97,6 +97,6 @@ commands = bash -c tools/releasenotes_tox.sh
 [testenv:requirements]
 deps =
   -egit+https://opendev.org/openstack/requirements#egg=openstack-requirements
-whitelist_externals = sh
+allowlist_externals = sh
 commands =
     sh -c '{envdir}/src/openstack-requirements/playbooks/files/project-requirements-change.py --req {envdir}/src/openstack-requirements --local {toxinidir} master'
