--- a/container-images/tcib/base/tripleoclient/tripleoclient.yaml
+++ b/container-images/tcib/base/tripleoclient/tripleoclient.yaml
@@ -2,11 +2,10 @@ tcib_actions:
 - run: bash /usr/local/bin/uid_gid_manage {{ tcib_user }}
 - run: dnf -y install {{ tcib_packages['common'] | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
 - run: openstack complete | tee /etc/bash_completion.d/osc.bash_completion > /dev/null
-- copy: /usr/share/tripleo-common/container-images/kolla/tripleoclient/create_super_user.sh /usr/local/bin/create_super_user.sh
-- copy: /usr/share/tripleo-common/container-images/kolla/tripleoclient/tripleoclient_sudoers /etc/sudoers.d/tripleoclient_sudoers
+- run: cp /usr/share/openstack-tripleo-common-containers/container-images/kolla/tripleoclient/create_super_user.sh /usr/local/bin/create_super_user.sh
+- run: cp /usr/share/openstack-tripleo-common-containers/container-images/kolla/tripleoclient/tripleoclient_sudoers /etc/sudoers.d/tripleoclient_sudoers
 - run: chmod 750 /usr/local/bin/create_super_user.sh
 - run: chmod 440 /etc/sudoers.d/tripleoclient_sudoers
-tcib_gather_files: '{{ lookup(''fileglob'', ''/usr/share/tripleo-common/container-images/kolla/tripleoclient/*'', wantlist=True) }}'
 tcib_packages:
   common:
   - sudo
