--- a/container-images/tcib/base/os/barbican-base/barbican-base.yaml
+++ b/container-images/tcib/base/os/barbican-base/barbican-base.yaml
@@ -1,9 +1,8 @@
 tcib_actions:
 - run: bash /usr/local/bin/uid_gid_manage nfast barbican
 - run: dnf -y install {{ tcib_packages['common'] | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- copy: /usr/share/tripleo-common/container-images/kolla/barbican-base/sudoers /etc/sudoers.d/barbican_sudoers
+- run: cp /usr/share/openstack-tripleo-common-containers/container-images/kolla/barbican-base/sudoers /etc/sudoers.d/barbican_sudoers
 - run: chmod 640 /etc/sudoers.d/barbican_sudoers
-tcib_gather_files: '{{ lookup(''fileglob'', ''/usr/share/tripleo-common/container-images/kolla/barbican-base/*'', wantlist=True) }}'
 tcib_packages:
   common:
   - openstack-barbican-common
