--- a/container-images/tcib/base/os/keystone/keystone.yaml
+++ b/container-images/tcib/base/os/keystone/keystone.yaml
@@ -2,14 +2,13 @@ tcib_actions:
 - run: bash /usr/local/bin/uid_gid_manage keystone
 - run: dnf module -y enable mod_auth_openidc && dnf -y install {{ tcib_packages['common'] | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
 - run: mkdir -p /var/www/cgi-bin/keystone && chown -R keystone /var/www/cgi-bin/keystone
-- copy: /usr/share/tripleo-common/container-images/kolla/keystone/extend_start.sh /usr/local/bin/kolla_extend_start
+- run: cp /usr/share/openstack-tripleo-common-containers/container-images/kolla/keystone/extend_start.sh /usr/local/bin/kolla_extend_start
 - run: chmod 755 /usr/local/bin/kolla_extend_start
 - run: cp -a /usr/bin/keystone-wsgi-public /var/www/cgi-bin/keystone/main
 - run: cp -a /usr/bin/keystone-wsgi-admin /var/www/cgi-bin/keystone/admin
 - run: sed -i -r 's,^(Listen 80),#\1,' /etc/httpd/conf/httpd.conf
 - run: sed -i -r 's,^(Listen 443),#\1,' /etc/httpd/conf.d/ssl.conf
 - run: ln -s /usr/share/openstack-tripleo-common/healthcheck/keystone /openstack/healthcheck && chmod a+rx /openstack/healthcheck
-tcib_gather_files: '{{ lookup(''fileglob'', ''/usr/share/tripleo-common/container-images/kolla/keystone/*'', wantlist=True) }}'
 tcib_packages:
   common:
   - httpd
