--- a/container-images/tcib/base/ovn-base/ovn-nb-db-server/ovn-nb-db-server.yaml
+++ b/container-images/tcib/base/ovn-base/ovn-nb-db-server/ovn-nb-db-server.yaml
@@ -1,8 +1,7 @@
 tcib_actions:
 - run: dnf -y install {{ tcib_packages['common'] | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- copy: /usr/share/tripleo-common/container-images/kolla/ovn/ovn-nb-db-server/start_nb_db_server.sh /usr/local/bin/start-nb-db-server
+- run: cp /usr/share/openstack-tripleo-common-containers/container-images/kolla/ovn/ovn-nb-db-server/start_nb_db_server.sh /usr/local/bin/start-nb-db-server
 - run: chmod 755 /usr/local/bin/start-nb-db-server
-tcib_gather_files: '{{ lookup(''fileglob'', ''/usr/share/tripleo-common/container-images/kolla/ovn/ovn-nb-db-server/*'', wantlist=True) }}'
 tcib_packages:
   common:
   - openvswitch-ovn-central
