--- a/container-images/tcib/base/os/iscsid/iscsid.yaml
+++ b/container-images/tcib/base/os/iscsid/iscsid.yaml
@@ -1,10 +1,9 @@
 tcib_actions:
 - run: dnf -y install {{ tcib_packages['common'] | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- copy: /usr/share/tripleo-common/container-images/kolla/iscsid/extend_start.sh /usr/local/bin/kolla_extend_start
+- run: cp /usr/share/openstack-tripleo-common-containers/container-images/kolla/iscsid/extend_start.sh /usr/local/bin/kolla_extend_start
 - run: chmod 755 /usr/local/bin/kolla_extend_start
 - run: rm -f /etc/iscsi/initiatorname.iscsi
 - run: ln -s /usr/share/openstack-tripleo-common/healthcheck/iscsid /openstack/healthcheck &&  chmod a+rx /openstack/healthcheck
-tcib_gather_files: '{{ lookup(''fileglob'', ''/usr/share/tripleo-common/container-images/kolla/iscsid/*'', wantlist=True) }}'
 tcib_packages:
   common:
   - iscsi-initiator-utils
