--- a/container-images/container_image_prepare_defaults.yaml
+++ b/container-images/container_image_prepare_defaults.yaml
@@ -26,9 +26,9 @@ parameter_defaults:
 
       # Container image name components for Ceph images.
       # Only used if Ceph is deployed.
-      ceph_namespace: quay.ceph.io/ceph-ci
+      ceph_namespace: quay.io/ceph
       ceph_image: daemon
-      ceph_tag: v6.0.0-stable-6.0-pacific-centos-8-x86_64
+      ceph_tag: v6.0.4-stable-6.0-pacific-centos-8-x86_64
 
       ceph_prometheus_namespace: quay.ceph.io/prometheus
       ceph_prometheus_image: prometheus
