Rename hieradata_files result var
This var is used internally in tripleo-ansible tripleo_hieradata role so
the check result is overwriting the variable used to generate hiera.yaml

Closes-Bug: #1933850
Change-Id: I9b6cdad78f834c097226bd1681fa2e13791c33aa

--- a/tripleo_common/templates/deployments.yaml
+++ b/tripleo_common/templates/deployments.yaml
@@ -76,13 +76,13 @@
     - name: List hieradata files for check mode
       find:
         path: /etc/puppet/check-mode/hieradata
-      register: hieradata_files
+      register: check_hieradata_files
       check_mode: no
 
     - name: diff hieradata changes for check mode
       command:
         diff -uN {{ hieradata_item.path | regex_replace('check-mode', '') }} {{ hieradata_item.path }}
-      with_items: "{{ hieradata_files.files }}"
+      with_items: "{{ check_hieradata_files.files }}"
       check_mode: no
       register: diff_results
       changed_when: diff_results.rc == 1
