Add python3-mod-wsgi to neutron-server image
This would be needed to deploy neutron with httpd+mod_wsgi.

Change-Id: Ic010c89f77ca9bee7973e43e433a5c4f99437ef2

--- a/container-images/tcib/base/os/neutron-base/neutron-server/neutron-server.yaml
+++ b/container-images/tcib/base/os/neutron-base/neutron-server/neutron-server.yaml
@@ -8,4 +8,5 @@ tcib_packages:
   - mod_ssl
   - python3-networking-ansible
   - python3-networking-baremetal
+  - python3-mod_wsgi
 tcib_user: neutron
