--- a/container-images/tcib/base/base.yaml
+++ b/container-images/tcib/base/base.yaml
@@ -14,7 +14,14 @@ tcib_actions:
     crudini --set /etc/dnf/dnf.conf main plugins 1 &&
     crudini --set /etc/dnf/dnf.conf main skip_missing_names_on_install False &&
     crudini --set /etc/dnf/dnf.conf main tsflags nodocs
-- run: if [ '{{ tcib_distro }}' == 'rhel' ]; then {% for item in tcib_packages.modules %}{% set key, value = (item.items() | list).0 %}dnf module -y {{ key }} {{ value }}; {% endfor %}fi
+- run: >-
+    if [ '{{ tcib_distro }}' == 'rhel' ]; then
+    {%- if "el" ~ tcib_release in tcib_packages.modules %}
+     {% for item in tcib_packages.modules["el" ~ tcib_release] %}{% set key, value = (item.items() | list).0 %}dnf module -y {{ key }} {{ value }}; {% endfor %}
+    {%- else %}
+      echo "WARNING: No modules defined for el{{ tcib_release}}";
+    {%- endif %}
+    fi
 - run: dnf install -y openstack-tripleo-common-containers
 - run: cp /usr/share/openstack-tripleo-common-containers/container-images/kolla/base/uid_gid_manage.sh /usr/local/bin/uid_gid_manage
 - run: chmod 755 /usr/local/bin/uid_gid_manage
@@ -28,15 +35,24 @@ tcib_actions:
 - run: chmod 755 /usr/local/bin/kolla_httpd_setup
 - run: cp /usr/share/openstack-tripleo-common-containers/container-images/kolla/base/sudoers /etc/sudoers
 - run: chmod 440 /etc/sudoers
-- run: sed -ri '/-session(\s+)optional(\s+)pam_systemd.so/d' /etc/pam.d/system-auth
+- run: >-
+    if [ '{{ tcib_release }}' == '8' ];then
+    sed -ri '/-session(\s+)optional(\s+)pam_systemd.so/d' /etc/pam.d/system-auth &&
+    dnf install -y curl; fi
 - run: sed -ri '/^(passwd:|group:)/ s/systemd//g' /etc/nsswitch.conf
 - run: dnf install -y {{ tcib_packages['common'] | join(' ') }}
+- run: >-
+    if [ '{{ tcib_release }}' == '9' ];then
+    dnf -y reinstall which &&
+    rpm -e --nodeps tzdata &&
+    dnf -y install tzdata; fi
 - run: mkdir -p /openstack
 - run: >-
-    if [ '{{ tcib_distro }}' == 'centos' ];then dnf download centos*release &&
-    rpm -ivh --nodeps --replacefiles *.rpm &&
-    rm -rf *.rpm &&
-    rpm -e --nodeps redhat-release; fi
+    if [ '{{ tcib_distro }}' == 'centos' ];then dnf -y install dnf-plugins-core &&
+    dnf download centos*release &&
+    rpm -ivh --nodeps --replacepkgs --replacefiles *.rpm &&
+    if [ '{{ tcib_release }}' == '8' ];then rpm -e --nodeps redhat-release; fi &&
+    rm -rf *.rpm; fi
 - run: dnf update --excludepkgs redhat-release -y && dnf clean all && rm -rf /var/cache/dnf
 tcib_cmd: kolla_start
 tcib_entrypoint: dumb-init --single-child --
@@ -49,7 +65,6 @@ tcib_labels:
 tcib_packages:
   common:
   - ca-certificates
-  - curl
   - dumb-init
   - glibc-langpack-en
   - iscsi-initiator-utils
@@ -63,12 +78,18 @@ tcib_packages:
   - sudo
   - tar
   - util-linux-user
+  - which
   modules:
-  - disable: container-tools:rhel8
-  - disable: virt:rhel
-  - enable: container-tools:{{ tcib_rhel_modules['container-tools'] | default('3.0') }}
-  - enable: mariadb:{{ tcib_rhel_modules['mariadb'] | default('10.3') }}
-  - enable: virt:{{ tcib_rhel_modules['virt'] | default('av') }}
-  - enable: redis:{{ tcib_rhel_modules['redis'] | default('5') }}
-  - enable: nodejs:{{ tcib_rhel_modules['nodejs'] | default('14') }}
+    el8:
+      - disable: container-tools:rhel8
+      - disable: virt:rhel
+      - enable: container-tools:{{ tcib_rhel_modules['container-tools'] | default('3.0') }}
+      - enable: mariadb:{{ tcib_rhel_modules['mariadb'] | default('10.3') }}
+      - enable: virt:{{ tcib_rhel_modules['virt'] | default('av') }}
+      - enable: redis:{{ tcib_rhel_modules['redis'] | default('5') }}
+    el9:
+      - disable: virt:rhel
+      - enable: virt:{{ tcib_rhel_modules['virt'] | default('av') }}
+      - enable: redis:{{ tcib_rhel_modules['redis'] | default('5') }}
+      - enable: mariadb:{{ tcib_rhel_modules['mariadb'] | default('10.5') }}
 tcib_stopsignal: SIGTERM
