Add apache to the designate api container
The designate API should run behind apache.

Change-Id: Ifb46702abe32d79ea097f02a684a2940887c0e23

--- a/container-images/tcib/base/os/designate-base/designate-api/designate-api.yaml
+++ b/container-images/tcib/base/os/designate-base/designate-api/designate-api.yaml
@@ -3,4 +3,7 @@ tcib_actions:
 tcib_packages:
   common:
   - openstack-designate-api
+  - httpd
+  - mod_ssl
+  - python3-mod_wsgi
 tcib_user: designate
