Add neutron-rpc-server to the base neutron image
When Neutron API is served by a web server (like httpd)
it's difficult to start an rpc listener thread. An rpc
server needs to be started to serve this puprose. This
adds neutron-rpc-server package to the base image for
that reason.

Change-Id: I50870b38aa97ce937a15343e7875cc70152b7135

--- a/container-images/tcib/base/os/neutron-base/neutron-base.yaml
+++ b/container-images/tcib/base/os/neutron-base/neutron-base.yaml
@@ -9,6 +9,7 @@ tcib_packages:
   - iputils
   - net-tools
   - openstack-neutron
+  - openstack-neutron-rpc-server
   - openstack-neutron-ml2
   - openvswitch
   - python3-networking-baremetal
