Re-add tripleoclient and tempest container
In the osp-director-operator [1] effort which uses tripleo to deploy
openstack using openshift to manage the hardware/vm provisioning.
To do so we rely on the tripleoclient and tempest container for
deployment/testing. Lets add the containers back to be built.

[1] https://github.com/openstack-k8s-operators/osp-director-operator

Change-Id: Id8d99560ccd412014fe1d13faad19c2a114cd6e6
(cherry picked from commit ede41284e02d4783e580d639c0ba650b91f98eee)

--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -187,3 +187,7 @@ container_images:
   image_source: tripleo
 - imagename: quay.io/tripleowallaby/openstack-unbound:current-tripleo
   image_source: tripleo
+- imagename: quay.io/tripleowallaby/openstack-tempest:current-tripleo
+  image_source: tripleo
+- imagename: quay.io/tripleowallaby/openstack-tripleoclient:current-tripleo
+  image_source: tripleo
