Remove rehdat-release package from UBI8 image
Also install centos*release package when tcib_distro
is centos.

*release packages are protected by dnf, so used
rpm commands to remove.

Disable upgrades pipeline to get this fix in.
Closes-Bug: #1939674
Change-Id: I5467a5faa36aa1359ff9b8135a512566dff12a79

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -10,7 +10,7 @@
       - tripleo-build-containers-jobs
       - tripleo-buildimage-jobs
       - tripleo-standalone-scenarios-pipeline
-      - tripleo-upgrades-master-pipeline
+      # - tripleo-upgrades-master-pipeline
     vars:
       ensure_global_symlinks: true
     check:
