--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -10,7 +10,7 @@
       - tripleo-build-containers-jobs
       - tripleo-buildimage-jobs
       - tripleo-standalone-scenarios-pipeline
-      - tripleo-upgrades-ussuri-pipeline
+      # - tripleo-upgrades-ussuri-pipeline
     check:
       jobs:
         - openstack-tox-linters
