Replace upgrades template when providers run again
The upgrades template was commented out to get
a change through that fixed failing content providers.

This template can be added back when the two
relevant release content provider jobs are
passing again.

Change-Id: If2b295042cfa2d71f26ad151062630b3cc836e94

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -11,7 +11,7 @@
       - tripleo-build-containers-jobs
       - tripleo-buildimage-jobs
       - tripleo-standalone-scenarios-pipeline
-      # - tripleo-upgrades-train-pipeline
+      - tripleo-upgrades-train-pipeline
     check:
       jobs:
         - openstack-tox-linters
